# Context_RCA

./: .gitignore  README.md  WORKFLOW.md  ablation_main.py  analyze_results.py  ensemble_with_gt.py  evaluate.py  evaluate_and_retry.py  extract_acc_1.py  extract_acc_3.py  main.py  merge_results.py  prepare_retest.py  pyproject.toml  run.py  run_distributed.py  run_single.py  scan_invalid_results.py
context_rca/: agent.py  prompt.py  tools.py
context_rca/ablations/: agent_variants.py  callbacks.py  callbacks.py.bak  no_consensus.py  no_select.py  no_sop.py  prompts.py
context_rca/callbacks/: consensus_agent_callbacks.py  log_agent_callbacks.py  metric_agent_callbacks.py  orchestrator_callbacks.py  report_agent_callbacks.py  trace_agent_callbacks.py
context_rca/schemas/: report_schema.py
context_rca_result/2649-single-gpt4o/: 2649_single_gpt4o_result.jsonl
context_rca_result/3576-baseline-gpt4o/: 3576-results-gpt4o.jsonl
context_rca_result/4515-single-ds/: result.jsonl
history_result/: 4947_result.jsonl  6272_result.jsonl
input/: failures_retest.json  input.json
output/: 3-6007.jsonl  5-6404.jsonl  component_keyword_total_table.csv  debug_result.jsonl  evaluation_results.jsonl  failures_component.jsonl  failures_reason.jsonl  minimal_groundtruth.json  result copy.jsonl  result.jsonl
retry_tasks/: input_round_3_retry_1.json  input_round_5_retry_1.json  output_round_1_retry_1.jsonl  output_round_2.jsonl  output_round_3.jsonl  output_round_4.jsonl  output_round_5.jsonl
single/: .env  agent.py  prompt.py  result.jsonl  tools.py
(+839 files in other folders)
